added comments in js file

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,11 +25,11 @@
       <header class="jumbotron">
          <h1 class="display-3">Work Day Scheduler</h1>
          <p class="lead">A simple calendar app for scheduling your work day</p>
-         <prrentDay" class="lead"></p>
+         <p id ="currentDay" class="lead"></p>
       </header>
       <div class="container">
         <div class="row time-block">
-          <div class="col-2 col-lg-1 hour" class ="time">9 AM</div>
+          <div class="col-2 col-lg-1 hour">9 AM</div>
           <textarea class="col-8 col-lg-10"></textarea>
             <button class=" col-2 col-lg-1 btn btn-block saveBtn d-flex justify-content-center align-items-center">
               <i class="fas fa-save"></i>
